K3S/tools/termix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termix
  namespace: termix
  labels:
    app: termix
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: termix
  template:
    metadata:
      labels:
        app: termix
    spec:
      containers:
        - name: termix
          image: ghcr.io/lukegus/termix:2.3.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: termix-volume
              mountPath: /app/data
              subPath: termix
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
      volumes:
        - name: termix-volume
          persistentVolumeClaim:
            claimName: termix-pvc
