K3S/tools/termix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: termix-svc
  namespace: termix
  labels:
    app: termix
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: termix
