K3S/tools/termix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: termix-http
  namespace: termix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: termix.k3s.wiserisk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: termix-svc
                port:
                  number: 8080
